# pkl-inspector

./: .gitignore  PATENT_PROVISIONAL.md  README.md  pkl_inspector.py  pkl_inspector_demo.py  pyproject.toml
.github/workflows/: test.yml
docs/: HOW_IT_WORKS.md  THREAT_MODEL.md
examples/: clean.pkl  malicious.pkl  suspicious.pkl
tests/: test_pkl_inspector.py
