[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkl-inspector"
version = "0.1.0"
description = "Static analysis for Python pickle files — detects malicious code without executing it"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    {name = "stillrunning.io", email = "security@stillrunning.io"}
]
keywords = [
    "pickle",
    "security",
    "static-analysis",
    "malware-detection",
    "supply-chain",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://stillrunning.io"
Repository = "https://github.com/johhnyg/pkl-inspector"

[project.scripts]
pkl-inspector = "pkl_inspector:main"

[tool.setuptools]
py-modules = ["pkl_inspector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
